--- a/src/main/java/com/mycompany/hospital/RandevuMenu.form
+++ b/src/main/java/com/mycompany/hospital/RandevuMenu.form
@@ -483,7 +483,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Calibri" size="14" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Saat &#xd6;ner"/>
+                <Property name="text" type="java.lang.String" value="Tarih Se&#xe7;"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton7ActionPerformed"/>
